# Voxa

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE.md  README.az.md  README.md  README.tr.md  SECURITY.md  autodub.py  install.txt  pyproject.toml  requirements.txt  setup.sh  voxa.py  voxa_server.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  RELEASING.md
examples/: config.json
scripts/: benchmark.py
tests/: test_autodub.py  test_golden.py  test_settings.py  test_voxa.py
tests/golden/: scene_intro.expected.json  scene_intro.input.json  tts_text.expected.json  tts_text.input.json
web/: .env.example  README.md  next.config.ts  package-lock.json  package.json  proxy.ts
web/app/: globals.css  icon.tsx  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/app/[locale]/: layout.tsx  page.tsx
web/app/[locale]/app/: layout.tsx  page.tsx
web/app/[locale]/app/jobs/: page.tsx
web/app/[locale]/app/jobs/[id]/: page.tsx
web/app/[locale]/app/models/: page.tsx
web/app/[locale]/app/settings/: page.tsx
web/app/[locale]/style-guide/: page.tsx
web/app/llms.txt/: route.ts
web/components/: language-switcher.tsx  query-provider.tsx  skip-link.tsx  theme-provider.tsx  theme-toggle.tsx  waveform.tsx
web/components/app/: app-page-header.tsx  app-sidebar.tsx  app-topbar.tsx  empty-state.tsx  job-detail.tsx  jobs-view.tsx  local-only-notice.tsx  models-view.tsx  nav-items.ts  new-job-flow.tsx  pipeline-progress.tsx  provider-card.tsx  query-states.tsx  settings-view.tsx  status-badge.tsx  upload-dropzone.tsx
web/components/icons/: github.tsx
web/components/landing/: author.tsx  demo.tsx  faq.tsx  features.tsx  hero.tsx  how-it-works.tsx  installation.tsx  landing-footer.tsx  landing-header.tsx  models.tsx  quick-start.tsx  section-header.tsx  voices.tsx  why.tsx
web/components/patterns/: terminal-block.tsx
web/components/seo/: json-ld.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx  field.tsx  input.tsx  select.tsx  textarea.tsx
web/i18n/: routing.ts
web/lib/: api.ts  config.ts  demos.ts  site.ts  structured-data.ts  types.ts  utils.ts  voices.ts
web/messages/: az.json  en.json  tr.json
web/public/: BingSiteAuth.xml
